done with app desc

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,5 @@
 <% if user_signed_in? %>
   <p>you are logged as <%= current_user.first_name %> <%= current_user.last_name %></p>
 <% end %>
+
+<h2>this app ios for surfers who check the waves conditions</h2>
