--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,6 @@
 <% if user_signed_in? %>
   <p>you are logged as <%= current_user.first_name %> <%= current_user.last_name %></p>
 <% end %>
+
+<img src="skdjfdkvnjc" alt="">
+<p>you can find cool surf photos on our platform</p>
