--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,5 +5,6 @@
 <% end %>
 
 <h2>this app ios for surfers who check the waves conditions</h2>
+<p>the data come from surfline.com</p>
 <img src="skdjfdkvnjc" alt="">
 <p>you can find cool surf photos on our platform</p>
